*firmware-imx-3.14.28 (09 Dec 2015)

  09 Dec 2015; Chuso Pérez +firmware-imx-3.14.28.ebuild, +metadata.xml:
  Added sys-kernel/firmware-imx.