@@ -1,6 +1,6 @@
-DIST firmware-imx-3.14.28-1.0.0.bin 268752 SHA256 1f09acd4d605efc78a0672068a658cb16274811d2f444cf3ae7aaa075266746f SHA512 d883dc895173d59c0c225ee2076cde36f4461cc1ff47f6528724a6a8a1b2b736404cff9b4bdb142ea1e543010b495b6be6332e89dea452424d78defd4e66b55d WHIRLPOOL 7696c4558b3b5a54c5931eada95ad3836a2634d91c8589c7e1c8fd01b7ee3d4c1847c04d076827db1ce4d4afa1a754a01f5e510b1cae785a5ef7117d04113fcc
-DIST fslbsp2coda.c 1734 SHA256 65d6a1a67491ccedfbb5bf3f8ddaa9806d1f3d7aac60851514337a7c48216a5d SHA512 51dca821780113403a28c6e33dd698320b9fbf6041bab136b2dc49106437f86d1329463a51c83f8e07b4abbf11e99bdf6aa411fca9662066f1f5fef01dbbfe1d WHIRLPOOL 8f8eb9363f00ec52b3808efece06a5656c284c503a4d60529841fd04cb2fd46d348d599991b58efe0ae16717c76379417f0778493dab6dcc032db100868f0c06
+AUX fslbsp2coda.c 1734 SHA256 65d6a1a67491ccedfbb5bf3f8ddaa9806d1f3d7aac60851514337a7c48216a5d SHA512 51dca821780113403a28c6e33dd698320b9fbf6041bab136b2dc49106437f86d1329463a51c83f8e07b4abbf11e99bdf6aa411fca9662066f1f5fef01dbbfe1d WHIRLPOOL 8f8eb9363f00ec52b3808efece06a5656c284c503a4d60529841fd04cb2fd46d348d599991b58efe0ae16717c76379417f0778493dab6dcc032db100868f0c06
+DIST firmware-imx-5.2.bin 381825 SHA256 8cc2df128c0e2d2f5224d73389fbe6e4d6fa9ede76f8c0a9adaf7ec0986d0f1f SHA512 5c1ca3045a68fbc3ece844dbd25999ddaf0c5df3f890db6ad4add458d71c44afcc1c0e04192457d9a2f356e5e27bb16dee06fd71807e15a4ad9c7410bb77b57d WHIRLPOOL 6a39789d1977b9c674ba5be317fbd53619ffde0fc45e90b0dafd56d8c3380f4e2a61876c09c7117e89d69a04fed867305206645d5ccb308d71a1ee844eafbdc6
 DIST v4l-codadx6-imx27.bin.zip 30629 SHA256 e1ee382310f31cd3024ce59a52798c11968b4027d8e12c32934d5c3e9e8c9819 SHA512 fa984a56abec22838c00a6cc43aadb70102594bbb4bbb2044d87775349cdae1b1f5ee7919431ddab089a54c3c8dcff6350d1d6011071cc3170ac2a830fea0a5c WHIRLPOOL 212761bdf078391073beb40fab3a70dab2554f5e89affe22b0aa6e7c04bbfe79a02a6bba6dba7a7a5902297be61503c9eac1b11fd0f68b196902c35ecd3efa27
-EBUILD firmware-imx-3.14.28.ebuild 1158 SHA256 bbb3ab5a1bc703c6384e43dc726f838d770bc4aae756ad4ebeb995e449a5a84a SHA512 7a1374b364e379126914c901d1a792d360274d7ea2d4177174119ef076460d25828eef6329a99540dc7272677c028e49115ab55675b26f85eb3da525bd5014da WHIRLPOOL 91a99b6c006d456a1672b42e15dc35162db9b553c702c4e793f25087038fe79146c10a9f0f276e24c84e8e34ee8817e87b30aa4796fb3a7dd55165924638f70c
-MISC ChangeLog 143 SHA256 e99a0e8ccbef20040d4bebe26f6fa5c8ab29aceaa702d243e5b8ba950a27c014 SHA512 34dc9af1c31a0208b8ac5308e00aba47be218bc5e1e08d176a7229dccf660e3d385cf1387bf39b3336b66a81944c34f2b6ee8c2c9abe99fb80872de02cd72af7 WHIRLPOOL d27af798eed1ce7d0256f360e98c7e1988cae7347141da5e806501a992abbb9941c9a9aa7e16bf3ad4815be24876f128a80620aa8df17e9263fad29d31c1704f
+EBUILD firmware-imx-5.2.ebuild 1173 SHA256 ec9962cdfb37c326c872ff9ba07e0ec720134e60699dd0b1fa2e5a1924aad59e SHA512 1dfd3a48216c3d227befec1f85bcecfa4d2b4d1f04df1cf39966c80b8302bf59d9582fcf4caa132707134d9c95ef1866afd000eb5eff272a3fcf4ad850891917 WHIRLPOOL e07ff397f4666966071e6a7ddb0e1e8b0ae20ab6c1b9c9b217bbf5f1a8925280bc6f0b44c3ce6c241003cd327e8766c6646af3804a6bcb223016075341b70743
+MISC ChangeLog 346 SHA256 d6ce9be6268d07c0b102045420d8d69f8fd820e8322237b8d41573a192ae3ef7 SHA512 318762452f41eaae23652aaaa02463d86bf1a561101f83eb086fc3240a4270d9d4ba9c4ca97f184ce5fedad1a2c1863a0f07748e183df7533fbbdaa7879391c2 WHIRLPOOL 1c57f092c4a8ebdb1f9c60183244fe864db66c985545cbb15cb9d0f343a6f83f2276dadfbc0ffa522f004ca331c749e5a832fe143e515d9edad87f51daf5d291
 MISC metadata.xml 139 SHA256 5cdc1888ebc8807b9a37b1d33429c61cabe7415a4f240e21a4c2ff8eca7a34ed SHA512 8be912ace7468a4396eb1da00a9785030a8ce35da4357a01591876a1056fd45e44da65de2af3e1eb0506ce6551714962c40c3ae5a3aefa2ad231de35af2519be WHIRLPOOL 620431014dd4fb752c3d46d11904ecb2c6d4525f5b4e30f4f778a3b74d3f7187ae4ccd856ebd7eabb48ce261b21849c732928fe647edce024a3fdc082d8f8630
