@@ -8,23 +8,26 @@ inherit eutils
 
 DESCRIPTION="Freescale IMX firmware such as for the VPU"
 HOMEPAGE="https://freescale.github.io"
-SRC_URI="http://www.freescale.com/lgfiles/NMG/MAD/YOCTO/${P}-1.0.0.bin
-		https://community.freescale.com/servlet/JiveServlet/download/335225-262426/v4l-codadx6-imx27.bin.zip
-		https://s.chuso.net/chuso-overlay/distfiles/fslbsp2coda.c"
+SRC_URI="http://www.nxp.com/lgfiles/NMG/MAD/YOCTO/${P}.bin
+		https://community.freescale.com/servlet/JiveServlet/download/335225-262426/v4l-codadx6-imx27.bin.zip"
 
 LICENSE="Freescale"
 SLOT="0"
 KEYWORDS="~arm"
 
-S=${WORKDIR}/${P}-1.0.0
-
 src_unpack() {
-	sh "${DISTDIR}/${P}-1.0.0.bin" --force --auto-accept || die
+	sh "${DISTDIR}/${P}.bin" --force --auto-accept || die
 	unpack v4l-codadx6-imx27.bin.zip
 }
 
+src_prepare() {
+	mv firmware/epdc/epdc_ED060XH2C1.fw{.nonrestricted,}
+	chmod 644 firmware/epdc/epdc_ED060XH2C1.fw
+	find -name '*.mk' -delete
+}
+
 src_compile() {
-	gcc -o fslbsp2coda "${DISTDIR}/fslbsp2coda.c" &&
+	gcc -o fslbsp2coda "${FILESDIR}/fslbsp2coda.c" &&
 	./fslbsp2coda firmware/vpu/vpu_fw_imx53.bin firmware/vpu/v4l-coda7541-imx53.bin &&
 	./fslbsp2coda firmware/vpu/vpu_fw_imx6d.bin firmware/vpu/v4l-coda960-imx6dl.bin &&
 	./fslbsp2coda firmware/vpu/vpu_fw_imx6q.bin firmware/vpu/v4l-coda960-imx6q.bin ||
@@ -32,7 +35,6 @@ src_compile() {
 }
 
 src_install(){
-	rm firmware/Android.mk &&
 	mv ../v4l-codadx6-imx27.bin firmware/vpu &&
 	(cd firmware && ln -s vpu/v4l-coda* .) &&
 	dodir /lib &&
